<resources>
    <string name="app_name">Yolked</string>
    <string name="muscles">Muscle Groups</string>
    <string name="Quads">Quads</string>
    <string name="Lats">Lats</string>
    <string name="Lowerback">Lowerback</string>
    <string name="Hamstrings">Hamstrings</string>
    <string name="Glutes">Glutes</string>
    <string name="Forearms">Forearms</string>
    <string name="Chest">Chest</string>
    <string name="Calves">Calves</string>
    <string name="Biceps">Biceps</string>
    <string name="Abs">Abdominal</string>
    <string name="Shoulders">Shoulders</string>
    <string name="Traps">Traps</string>
    <string name="Triceps">Triceps</string>
    <string name="schedule">Workout Schedule</string>
    <string name="about">About</string>
    <string name="workout">Exercises</string>
    <string name="Favorites">Favorites</string>
    <string name="login">Log In</string>
    <string name="profile">Profile</string>
    <string name="favorites_title">Favorites</string>
    <string name="description">Description Currently Unavailable\n\n- Coming Soon! -</string>
    <string name="action_settings">action settings</string>
    <string name="home">home</string>
    <string name="setting">setting</string>
    <string name="favorites_message">Successfully Added To Favorites!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_attempts">Number of Attempts Remaining: 3</string>
    <string name="noFavorites">"You have no favorites"</string>
    <string name="incomplete">Incomplete</string>
    <string name="about_synopsis">
        \t<i>Yolked</i> is an application that acts as your own personal trainer.
        From looking for the right workout to creating your own favorite workout page, Yolked is the recipe for becoming more confident
        when going into the gym.
        Utilize the application by quickly seeking out ideal workouts that best suit you. If you would like to keep a list of your
        favorite workouts, simply favorite the exercise by clicking the non filled star on the top right corner of the page. All of your
        favorited workouts will reside in the favorites activity which you can find on the main menu.
\n\n<b>Before You Start: Safety Precautions:</b>
\n\tIf you are planning to increase your physical activity or start an exercise program, you start with a sedentary activity—answering a few short questions, that is. The PAR-Q (Physical Activity Readiness Questionnaire) is the gold standard in fitness safety, used by doctors, trainers and health clubs the world over. Usually comprised of 5-7 questions, it can help rule out any underlying health concerns that could worsen with exercise. Answer yes or no to the following questions.
\n\n<b>1.</b> Has your doctor ever said that you have a heart condition and that you should only do physical activity recommended by a doctor?
\n\n<b>2.</b> Do you feel pain in your chest when you do physical activity?
\n\n<b>3.</b> In the past month, have you had chest pain when you were not doing physical activity?
\n\n<b>4.</b> Do you lose your balance because of dizziness or do you ever lose consciousness?
\n\n<b>5.</b> Do you have a bone or joint problem (for example, back, knee, or hip) that could be made worse by a change in your physical activity?
\n\n<b>6.</b> Is your doctor currently prescribing drugs (for example, water pills) for your blood pressure or heart condition?
\n\n<b>7.</b> Do you know of any other reason why you should not do physical activity?
\n\n<b>If you answer YES to any of the questions on this list, consider checking in with your doctor
        and get cleared for exercise before you start.</b>
    </string>
</resources>
