<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="org.staysee.forcefitness.WorkoutActivity">


    <EditText
        android:id="@+id/UsernameBox"
        android:layout_width="300dp"
        android:textSize="40sp"
        android:layout_height="100dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="104dp"
        android:hint="@string/username"
        android:inputType="textAutoComplete"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginAttempt"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/PasswordBox"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textSize="40sp"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UsernameBox"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/LoginAttempt"
        android:layout_width="321dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="112dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/login_attempts"
        android:textSize="55sp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="369dp"
        android:layout_height="182dp"
        android:text="@string/login"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:background="@color/colorPrimary"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.184"
        tools:layout_editor_absoluteX="181dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline5"
        app:layout_constraintGuide_begin="764dp"
        android:orientation="horizontal" />
</android.support.constraint.ConstraintLayout>