<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="org.staysee.forcefitness.MuscleActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:title="@string/app_name"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="@color/colorWords"
        tools:targetApi="lollipop"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/muscles"
                android:layout_width="0dp"
                android:layout_height="375dp"
                android:text="@string/muscles"
                android:textSize="35sp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/guideline4" />

            <Button
                android:id="@+id/schedule"
                android:layout_width="0dp"
                android:layout_height="375dp"
                android:text="@string/schedule"
                android:textSize="35sp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="@+id/guideline3"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline4"
                tools:ignore="RtlHardcoded" />
            <Button
                android:id="@+id/profile"
                android:layout_width="0dp"
                android:layout_height="375dp"
                android:text="@string/profile"
                android:textSize="35sp"
                android:layout_marginTop="0dp"
                app:layout_constraintTop_toBottomOf="@+id/muscles"
                android:layout_marginLeft="0dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/guideline3"
                android:layout_marginRight="0dp"
                app:layout_constraintHorizontal_bias="0.0" />

            <Button
                android:id="@+id/about"
                android:layout_width="0dp"
                android:layout_height="375dp"
                android:text="@string/about"
                android:textSize="35sp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="@+id/guideline3"
                app:layout_constraintRight_toRightOf="parent"
                tools:ignore="RtlHardcoded"
                android:layout_marginTop="0dp"
                app:layout_constraintTop_toBottomOf="@+id/location" />

            <Button
                android:id="@+id/login"
                android:layout_width="0dp"
                android:layout_height="375dp"
                android:text="@string/login"
                android:textSize="35sp"
                android:layout_marginLeft="0dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/guideline3"
                android:layout_marginRight="0dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="0dp"
                app:layout_constraintTop_toBottomOf="@+id/profile" />

            <Button
                android:id="@+id/location"
                android:layout_width="0dp"
                android:layout_height="375dp"
                android:text="@string/location"
                android:textSize="35sp"
                tools:ignore="RtlHardcoded"
                android:layout_marginLeft="0dp"
                app:layout_constraintLeft_toLeftOf="@+id/guideline3"
                android:layout_marginRight="0dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="0dp"
                app:layout_constraintTop_toBottomOf="@+id/schedule" />
            <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline3"
                app:layout_constraintGuide_begin="400dp"
                android:orientation="vertical" />

            <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline4"
                app:layout_constraintGuide_begin="105dp"
                android:orientation="horizontal" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
